syntax = "proto3";

package manager_object;

option go_package = "./v1;v1";

import "validate/validate.proto";


message Object {
  uint32 id = 1;
  string keyword = 2;
  string name = 3;
  string api = 4;
  string method = 5;
  string params = 6;
  string label = 7;
  string value = 8;
  string description = 9;
  optional uint32 created_at = 10;
  optional uint32 updated_at = 11;
}

 message GetObjectRequest{
   uint32 id = 1[(validate.rules).uint32 = {gt: 0}];
 }

message PageObjectRequest{
  uint32 page = 1[(validate.rules).uint32 = {gt: 0}];
  uint32 page_size = 2[(validate.rules).uint32 = {gt: 0,lte:50}];
  optional string keyword = 3;
  optional string name = 4;
}

message PageObjectReply{
  uint32 total = 1;
  repeated Object list = 2;
}

message AddObjectRequest{
  string keyword = 1[(validate.rules).string = {min_len:1}];
  string name = 2[(validate.rules).string = {min_len:1}];
  string api = 3[(validate.rules).string = {min_len:1}];
  string method = 4[(validate.rules).string = {min_len:1}];
  optional string params = 5;
  string label = 6[(validate.rules).string = {min_len:1}];
  string value = 7[(validate.rules).string = {min_len:1}];
  string description = 8[(validate.rules).string = {min_len:1}];
}

message AddObjectReply{
  uint32 id =1;
}

message UpdateObjectRequest{
  uint32 id = 9[(validate.rules).uint32 = {gt:0}];
  string keyword = 1[(validate.rules).string = {min_len:1}];
  string name = 2[(validate.rules).string = {min_len:1}];
  string api = 3[(validate.rules).string = {min_len:1}];
  string method = 4[(validate.rules).string = {min_len:1}];
  optional string params = 5;
  string label = 6[(validate.rules).string = {min_len:1}];
  string value = 7[(validate.rules).string = {min_len:1}];
  string description = 8[(validate.rules).string = {min_len:1}];
}

message DeleteObjectRequest{
  uint32 id = 1[(validate.rules).uint32 = {gt:0}];
}
